KubernetesConfigs/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\windows\system32\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\windows\system32\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/api-network: "true"
        io.kompose.service: api
    spec:
      containers:
        - image: jornkersten/rackgateway:latest
          name: api
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: ocelot
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: ocelot
          persistentVolumeClaim:
            claimName: rack-api-pvc
status: {}
