KubernetesConfigs/postgres-users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\windows\system32\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-users
  name: postgres-users
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-users
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\windows\system32\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/api-network: "true"
        io.kompose.service: postgres-users
    spec:
      containers:
        - name: postgres-users
          image: jornkersten/rackuserdatabase
          ports:
            - containerPort: 5432
      restartPolicy: Always
status: {}
