KubernetesConfigs/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\windows\system32\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "5283"
      port: 5283
      targetPort: 5283
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
