KubernetesConfigs/postgres-users-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\windows\system32\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-users
  name: postgres-users
spec:
  ports:
    - name: "http"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgres-users
status:
  loadBalancer: {}
