KubernetesConfigs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
      paths:
        - path: /User
          pathType: Prefix
          backend:
            service:
              name: user
              port:
                number: 5114
        - path: /Message
          pathType: Prefix
          backend:
            service:
              name: message
              port:
                number: 5012
